--- a/src/assets/sass/_search_popups.scss
+++ b/src/assets/sass/_search_popups.scss
@@ -267,7 +267,7 @@
       a {
         color: #929fa7;
         display: block;
-        padding: 40px 20px 8px;
+        padding: 40px 13px 8px;
         text-align: center;
         background-size: 25px;
         background-repeat: no-repeat;
@@ -1486,7 +1486,7 @@
 
       ul li {
         width: 20%;
-        height: 50px;
+        //height: 50px;
 
         a {
           margin-top: 0;
